--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Antariex/grupo3Animalia#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.0",
     "nodemon": "^2.0.16"
   }
