--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
   },
   "homepage": "https://github.com/Antariex/grupo3Animalia#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "debug": "^4.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.0",
-    "nodemon": "^2.0.16"
+    "http-errors": "^2.0.0",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.16",
+    "urlencode": "^1.1.0"
   }
 }
