--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "debug": "^4.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.0",
+    "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
