--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "debug": "^4.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.0",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
     "method-override": "^3.0.0",
