--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "keywords": [
     "Animalia"
   ],
-  "author": "Grupo 3",
+  "author": "Ariel Antequirea, Mariano Vélez, Maru Bruno, Fer Miguez",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Antariex/grupo3Animalia/issues"
